# free-games-sdk

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md
.sdk/: package-lock.json  package.json
go/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  free-games.go  go.mod
go-cli/: .gitignore  Makefile  README.md  go.mod  main.go  words.go
go-mcp/: .gitignore  Makefile  README.md  go.mod  main.go  tools.go
lua/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.lua  features.lua  free-games.rockspec  (+2 more)
py/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.py  features.py  freegames_sdk.py  freegames_types.py  pyproject.toml
py/core/: context.py  control.py  error.py  operation.py  result.py  utility_type.py
py/entity/: giveaway_entity.py  worth_entity.py
py/feature/: base_feature.py  clienttrack_feature.py  debug_feature.py  metrics_feature.py  paging_feature.py  proxy_feature.py  ratelimit_feature.py  rbac_feature.py  retry_feature.py  telemetry_feature.py  test_feature.py  timeout_feature.py
py/test/: runner.py  test_exists.py  test_giveaway_direct.py  test_giveaway_entity.py  test_netsim.py  test_pipeline.py  test_primary_utility.py  test_readme_examples.py  test_worth_direct.py  test_worth_entity.py
py/utility/: clean.py  done.py  feature_add.py  feature_init.py  make_context.py  make_error.py  make_options.py  make_request.py  make_result.py  make_spec.py  param.py  prepare_auth.py  prepare_method.py  prepare_params.py  prepare_path.py  register.py  result_basic.py  transform_request.py  transform_response.py
(+437 files in other folders)
